prevent line breaks in email address in order confirmation email

--- a/email/src/css/styles.less
+++ b/email/src/css/styles.less
@@ -9,6 +9,11 @@
   font-size: @base-font-size;
 }
 
+.nowrap {
+  white-space: nowrap;
+}
+
+
 h1 {
   font-size: (2.55*@base-font-size);
   margin-top: 30px;
